--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Vamshi Yadav",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
