Map Integration To Show Page

--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # create your own credentials
 
-CLOUD_NAME=dww2xshws
-CLOUD_API_KEY=661625244651141
-CLOUD_API_SECRET=Pfy3r3gJuURpPPTv1n3JYPhSsBo
-GOOGLE_MAP_API=AlzaSykdt2tZdEhRI3jypHGX0YO8_qxg0T3Tv2K
+
+
+# hello DEV
